ast: rename literal records and parse full integer literal syntax
Rename Integer/Boolean records to IntegerLiteral/BooleanLiteral to stop
shadowing java.lang types. Parse integer literals through BigInteger
with radix detection (0x/0o/0b), underscore separators and type-suffix
stripping, so any rustc-accepted literal (including values past long
range) is representable. IntegerLiteral.value becomes BigInteger.

Drop isize/usize from accepted declared types in TypeReader.